--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
         header {
             background: var(--header-bg) no-repeat center center;
-            background-size: cover;
+            background-size: 100%;
             color: white;
             text-align: center;
             padding: 150px 20px;
@@ -143,7 +143,7 @@
 </head>
 <body>
     <header>
-        <h1>Community Service</h1>
+        <h1> </h1>
     </header>
 
     <nav>
