--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
         <a href="#advocacy">What is My Advocacy?</a>
         <a href="#types">3 Types of Community Service</a>
         <a href="#importance">Why is it Important?</a>
-        <a href="#benefits">Why is it Important?</a>
+        <a href="#benefits">Benefits</a>
         <a href="#organization">My Organization</a>
         <a href="#author">About the Author</a>
     </nav>
